--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,11 +1,29 @@
-html,body,.container-fluid
+html,body,.gmap-wrapper
 {
+	width: 100%;
     height:100%;
+    margin: 0 auto; 
 }
 
-.container-fluid
+.place-wrapper
 {
-    display:table;
-    width: 100%;
-    background-color: green;
+	position: absolute; 
+	width: 300px;
+	top: 30px; 
+	right: 10px; 
+	z-index: 10;
+	background-color: black;
+}
+
+.places-list
+{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+.place-item
+{
+	font: 20px/1.5 Helvetica, Verdana, sans-serif;
+  	border-bottom: 1px solid #ccc;
 }
