css, markers and observables

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -26,4 +26,6 @@ html,body,.gmap-wrapper
 {
 	font: 20px/1.5 Helvetica, Verdana, sans-serif;
   	border-bottom: 1px solid #ccc;
+  	color: white;
 }
+
