--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -161,8 +161,13 @@ h4 {
 }
 
 .infowindow {
-  height: 100px;
-  width: 215px;
+  height: 110px;
+  width: 200px;
+}
+
+.streetview {
+  height: 200px;
+  width: 300px;
 }
 
 .small-list-toggle {
